--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "iron-session": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
         "moment": "^2.30.1",
-        "next": "14.0.4",
+        "next": "^14.2.3",
         "next-international": "^1.2.3",
         "playwright": "^1.41.1",
         "prisma": "^5.8.0",
